tests/purs/failing/DuplicateTypeClass.purs
-- @shouldFailWith DuplicateTypeClass
module Main where
class C
class C
